--- a/games/games.csproj
+++ b/games/games.csproj
@@ -52,13 +52,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameWords.cs">
+    <Compile Include="GameWords\GameWords.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GameWords.Designer.cs">
+    <Compile Include="GameWords\GameWords.Designer.cs">
       <DependentUpon>GameWords.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameWordsLogic.cs" />
+    <Compile Include="GameWords\GameWordsLogic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavesClass\AbstactSave.cs" />
@@ -68,7 +68,7 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GameWords.resx">
+    <EmbeddedResource Include="GameWords\GameWords.resx">
       <DependentUpon>GameWords.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -92,6 +92,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="GameBoxes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
