--- a/games/games.csproj
+++ b/games/games.csproj
@@ -52,6 +52,15 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameAbs.cs" />
+    <Compile Include="GameEcuation\Equation.cs" />
+    <Compile Include="GameEcuation\GameEquationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameEcuation\GameEquationForm.Designer.cs">
+      <DependentUpon>GameEquationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GameEcuation\GameEquationLogic.cs" />
     <Compile Include="GameWords\GameWords.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,11 +71,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavesClass\AbstactSave.cs" />
+    <Compile Include="SavesClass\EquationData.cs" />
+    <Compile Include="SavesClass\SaverEquation.cs" />
     <Compile Include="SavesClass\SimpleData.cs" />
     <Compile Include="SavesClass\SaverWord.cs" />
     <Compile Include="SavesClass\WordData.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameEcuation\GameEquationForm.resx">
+      <DependentUpon>GameEquationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GameWords\GameWords.resx">
       <DependentUpon>GameWords.cs</DependentUpon>
